5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1828_3184.log
== TEST (2019-06-12 14:34:16) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for x in range(0,x,-1):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:16) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for i in range([x],-1):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:25) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for'i'in range(0,x):
	print(i)
-- ERROR:
File "XXXX", line 3
    for'i'in range(0,x):
      ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:16) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for[x]in range(0,size,-1):
	print('x')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:36) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for[x]in range(0,size,-1):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:46) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for[x]in range(0,size,-1):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:34) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for i in x range(0,x,-1)
print('i')
-- ERROR:
File "XXXX", line 3
    for i in x range(0,x,-1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:43) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for i in x range(0,x,-1)
print('x')
-- ERROR:
File "XXXX", line 3
    for i in x range(0,x,-1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:07) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for[x]in range(0,size,-1):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:39:23) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for i in range(0,size,-1):
	print(i)
-- EXECUTION TIME:
1.02482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/3184/main.py", line 3, in <module>
    for i in range(0,size,-1):
TypeError: 'function' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:40:03) 
-- CODE:
from numpy import*
x=array(input("letras:"))
for i in range(0,size,-1):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:40:17) 
-- CODE:
from numpy import*
x=array(eval(input("letras:"))
for i in range(0,size,-1):
	print(i)
-- ERROR:
File "XXXX", line 3
    for i in range(0,size,-1):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:15) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")	 

for i in range(0,size,-1):
print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(0,size,-1):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:20) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")	 

for i in range(0,size,-1):
	print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(0,size,-1):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:30) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")	 

for i in range(0,x-1):
	print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(0,x-1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:45) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")	 

for i in range(0,x-1):
	print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(0,x-1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:41:49) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")	 

for i in range(0,x-1):
	print(i)
-- EXECUTION TIME:
0.648058
-- ERROR:
  File "/home/codebench/codes/1828/3184/main.py", line 4
    for i in range(0,x-1):
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:05) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for i in range(0,x-1):
	print(i)
-- ERROR:
File "XXXX", line 4
    for i in range(0,x-1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:17) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for xin range(0,x-1):
	print(i)
-- ERROR:
File "XXXX", line 4
    for xin range(0,x-1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:01) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1):
	print(i)
-- ERROR:
File "XXXX", line 4
    for x in range(0,x,-1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:15) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1):
				 print(i)
-- ERROR:
File "XXXX", line 4
    for x in range(0,x,-1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:18) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
				 print(i)
-- ERROR:
File "XXXX", line 5
    print(i)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:25) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
	print(i)
-- ERROR:
File "XXXX", line 5
    print(i)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:32) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
	print(x
-- ERROR:
File "XXXX", line 5
    print(x
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:39) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
	print(x)
-- ERROR:
File "XXXX", line 5
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:47) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
print(x)
-- ERROR:
File "XXXX", line 5
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:00) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
	print('x)
-- ERROR:
File "XXXX", line 5
    print('x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:12) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
	print('x')
-- ERROR:
File "XXXX", line 5
    print('x')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:34) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1)
	print('x')
-- ERROR:
File "XXXX", line 5
    print('x')
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:38) 
-- CODE:
from numpy import*
x=array(eval(input("letras:")

for x in range(0,x,-1):
	print('x')
-- ERROR:
File "XXXX", line 4
    for x in range(0,x,-1):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:55) 
-- CODE:
from numpy import*
vet=array(eval(input("letras:")))
for vet in range([vet],0,-1):
	print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:27) 
-- CODE:
from numpy import*
vet=array(eval(input("letras:")))
for vet in range(vet,0,-1):
	print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:57) 
-- CODE:
from numpy import*
vet=array(eval(input("letras:")))
print([vet])

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:31) 
-- CODE:
from numpy import*
vet=array(eval(input("letras:"))).split(',')
print([vet])

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:50) 
-- CODE:
from numpy import*
vet=array(input("letras:")).split(',')
print([vet])

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:20) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')
x=size(vet)
for i in vet range(0,x,-1):
	print(vet)


	
-- ERROR:
File "XXXX", line 4
    for i in vet range(0,x,-1):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:43) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')
x=size(vet)
for i in vet range(x,-1):
	print(vet)


	
-- ERROR:
File "XXXX", line 4
    for i in vet range(x,-1):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:15) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')
x=size(vet)
for vet in range(0,x,-1):
	print(vet)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:39) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for vet in range(0,x,-1):
	print(vet)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:54:53) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for vet in range(0,x,-1):
	print(vet)


	
-- EXECUTION TIME:
1.21712
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:

-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:

-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:58) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for vet in range(0,x,-1):
print(vet)


	
-- ERROR:
File "XXXX", line 5
    print(vet)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:01) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for vet in range(0,x,-1):
	print(vet)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:17) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for vet in range(0,x,-1):
	print([vet])


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:14) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for[vet] in range(0,x,-1):
	print([vet])


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:38) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for[vet] in range(0,vet,-1):
	print([vet])


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:57:11) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
for[vet] in range(vet,-1):
	print([vet])


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:57:36) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
x=size(vet)
print(x)
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:58:04) 
-- CODE:
from numpy import*
vet=array((input(":")))
x=size(vet)
print(x)
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:58:32) 
-- CODE:
from numpy import*
vet=array((input(":")))
print(vet)
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:58:47) 
-- CODE:
from numpy import*
vet=array((input(":")))
print(vet)*-1
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:08) 
-- CODE:
from numpy import*
vet=array((input(":")))
print('(vet)*-1')


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:27) 
-- CODE:
from numpy import*
vet=array((input(":")))
print((vet)*-1)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:01:58) 
-- CODE:
from numpy import*
vet=array((input(":")))
s=size('vet')
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:02:23) 
-- CODE:
from numpy import*
vet=array((input(":")))
s=soma(vet)
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:02:44) 
-- CODE:
from numpy import*
vet=array((input(":")))
s=sum(vet)
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:12) 
-- CODE:
from numpy import*
vet=array(eval(input()))
s=sum(vet)
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:21) 
-- CODE:
from numpy import*
vet=array(eval(input()))
s=sum(vet)
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:04:07) 
-- CODE:
from numpy import*
vet=array(eval(input()))
s=str(sum(vet))
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:35) 
-- CODE:
from numpy import*
vet=array(eval(input()))
s=arange(vet)
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:13) 
-- CODE:
from numpy import*
vet=array(eval(input()))
s=all(vet)
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:27) 
-- CODE:
from numpy import*
vet=array(eval(input()))
s=all(vet)
print(s)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:05) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
s=one(arange,vet):
	print(s)
-- ERROR:
File "XXXX", line 3
    s=one(arange,vet):
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:30) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
zero(arange(vet)):
	print(s)
-- ERROR:
File "XXXX", line 3
    zero(arange(vet)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:35) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
zeros(arange(vet)):
	print(s)
-- ERROR:
File "XXXX", line 3
    zeros(arange(vet)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:44) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
one(arange(vet)):
	print(s)
-- ERROR:
File "XXXX", line 3
    one(arange(vet)):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:11:33) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(0,size(vet),-1):
	print(vet)
-- ERROR:
File "XXXX", line 3
    for vet in range(0,size(vet),-1):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:11:35) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(0,size(vet),-1):
	print(vet)
-- ERROR:
File "XXXX", line 3
    for vet in range(0,size(vet),-1):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:11:36) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(0,size(vet),-1):
	print(vet)
-- EXECUTION TIME:
0.695139
-- ERROR:
  File "/home/codebench/codes/1828/3184/main.py", line 3
    for vet in range(0,size(vet),-1):
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:11:51) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(0,size[vet],-1):
	print(vet)
-- ERROR:
File "XXXX", line 3
    for vet in range(0,size[vet],-1):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:11:55) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(0,size[vet],-1)
	print(vet)
-- ERROR:
File "XXXX", line 4
    print(vet)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:12:00) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(0,size[vet],-1)
print(vet)
-- ERROR:
File "XXXX", line 4
    print(vet)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:12:19) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(0,size[vet]):
			 

-- ERROR:
File "XXXX", line 3
    for vet in range(0,size[vet]):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:12:53) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range([vet],-1):
	print(vet)
			 

-- ERROR:
File "XXXX", line 3
    for vet in range([vet],-1):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:02) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')
for vet in range(vet,-1):
	print(vet)
			 

-- ERROR:
File "XXXX", line 3
    for vet in range(vet,-1):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:32) 
-- CODE:
from numpy import*
vet=array(eval(input(":")).split(',')

	for vet in range(vet,-1):
			 print(vet)	 

-- ERROR:
File "XXXX", line 4
    for vet in range(vet,-1):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:48) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

	for vet in range(vet,-1):
			 print(vet)	 

-- ERROR:
File "XXXX", line 4
    for vet in range(vet,-1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:57) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

for vet in range(vet,-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:14) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

for vet in range([vet],-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:28) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

for vet in range([vet],-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:48) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

for vet in range([vet],0,-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:56) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

for vet in range([vet],0,-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:38) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:18:51) 
-- CODE:
from .split() import*
vet=array(eval(input(":")))
from numpy import*
for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
File "XXXX", line 1
    from .split() import*
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:21) 
-- CODE:

vet=array(eval(input(":"))).split(',')
from numpy import*
for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vet=array(eval(input())).split(',')
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:37) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:19:51) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- EXECUTION TIME:
0.948812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/3184/main.py", line 2, in <module>
    vet=array(eval(input())).split(',')
AttributeError: 'numpy.ndarray' object has no attribute 'split'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:51) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:04) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:31) 
-- CODE:
from numpy import*
vet=eval(input(":")).split(',')

for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:52) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:21:55) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')
a=a
b=b
c=c
d=d
for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:22:23) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')
a="a"
b="b"
c="c"
d="d"
for vet in range(0,size(nel(vet)),-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:19) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for vet in range(0,'vet',-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:25) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for vet in range(0,'vet',-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:34) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for i in range(0,vet,-1):
	print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:52) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

for [i] in range(0,vet,-1):
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:08) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')
a=[vet]
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:30) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:48) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:58) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:05) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:31) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))

print([vet])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:44) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
print([vet])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:56) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
print([vet])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:10) 
-- CODE:
from numpy import*
vet=array((input(":")))
print([vet])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:30) 
-- CODE:
from numpy import*
vet=array((input(":")))
print([vet],-1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:45) 
-- CODE:
from numpy import*
vet=array((input(":")))
print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:13) 
-- CODE:
from numpy import*
vet=array((input(":")))
soma=sum(vet)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:31) 
-- CODE:
from numpy import*
vet=array((input(":")))
soma=sum[vet]
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:47) 
-- CODE:
from numpy import*
vet=array((input(":")))
soma=sum([vet])
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:36) 
-- CODE:
from numpy import*
vet=array((input(":")))
m=size([vet])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:43) 
-- CODE:
from numpy import*
vet=array((input(":")))
m=size([vet])
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:31) 
-- CODE:
from numpy import*
vet=array((input(":")))
cont=0
while(vet>1):
	cont=cont+1
for componente in vet range(0,cont,-1):
	print(componente)
-- ERROR:
File "XXXX", line 6
    for componente in vet range(0,cont,-1):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:44) 
-- CODE:
from numpy import*
vet=array((input(":")))
cont=0
while(vet>1):
	cont=cont+1
for componente in vet range(0,(cont),-1):
	print(componente)
-- ERROR:
File "XXXX", line 6
    for componente in vet range(0,(cont),-1):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:55) 
-- CODE:
from numpy import*
vet=array((input(":")))
cont=0
while(vet>1):
	cont=cont+1

	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:07) 
-- CODE:
from numpy import*
vet=array((input(":")))
cont=0
while(vet>1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:11) 
-- CODE:
from numpy import*
vet=array((input(":")))
cont=0
while(vet>1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:22) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while(vet>1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:37) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while([vet]>1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:04) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while(vet[i]>1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:26) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while(vet[i]<1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:42) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while(vet<1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:34:02) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while((vet)<1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:34:08) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while((vet)<1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:34:15) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while([vet]<1):
	cont=cont+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:34:38) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
cont=0
while([vet]<1):
	cont=cont+1
print(cont)
-- EXECUTION TIME:
1.08863
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/3184/main.py", line 4, in <module>
    while([vet]<1):
TypeError: unorderable types: list() < int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:23) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
for componente in [vet]range(vet,0)
print([vet])
-- ERROR:
File "XXXX", line 3
    for componente in [vet]range(vet,0)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:39) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
for componente in [vet]range((vet),0)
print([vet])
-- ERROR:
File "XXXX", line 3
    for componente in [vet]range((vet),0)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:47) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
for componente in vet range((vet),0)
print([vet])
-- ERROR:
File "XXXX", line 3
    for componente in vet range((vet),0)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:54) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))
for componente in vet range(vet,0):
print([vet])
-- ERROR:
File "XXXX", line 3
    for componente in vet range(vet,0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:03) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))


for componente in vet range(vet,0):
print([vet])
-- ERROR:
File "XXXX", line 5
    for componente in vet range(vet,0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:41) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in vet range(vet,0):
print([vet])
-- ERROR:
File "XXXX", line 5
    for componente in vet range(vet,0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:03) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in vet range(vet,0):
	print(componente)
-- ERROR:
File "XXXX", line 5
    for componente in vet range(vet,0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:18) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in vet range(vet,-1):
	print(componente)
-- ERROR:
File "XXXX", line 5
    for componente in vet range(vet,-1):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:40:21) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in vet range(vet,-1):
	print(componente)
-- EXECUTION TIME:
0.760795
-- ERROR:
  File "/home/codebench/codes/1828/3184/main.py", line 5
    for componente in vet range(vet,-1):
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:31) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in vet range(vet,0,-1):
	print(componente)
-- ERROR:
File "XXXX", line 5
    for componente in vet range(vet,0,-1):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:42) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in vet range vet,0,-1:
	print(componente)
-- ERROR:
File "XXXX", line 5
    for componente in vet range vet,0,-1:
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:55) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in vet range(0,-1):
	print(componente)
-- ERROR:
File "XXXX", line 5
    for componente in vet range(0,-1):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:41:32) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for componente in [vet](-1):
	print(componente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:43:01) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for i in [vet]range(0,vet,-1):
	print(componente)
-- ERROR:
File "XXXX", line 5
    for i in [vet]range(0,vet,-1):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:01) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for i in [vet]range(0,i,-1):
	print([vet])
-- ERROR:
File "XXXX", line 5
    for i in [vet]range(0,i,-1):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:28) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for i in range(0,[i],-1):
	print([vet])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:44:34) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for i in range(0,[i],-1):
	print([vet])
-- EXECUTION TIME:
1.2076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/3184/main.py", line 2, in <module>
    vet=array(eval(input())).split(',')
AttributeError: 'numpy.ndarray' object has no attribute 'split'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:37) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for i in range(0,[i],-1):
	print([vet])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:37) 
-- CODE:
from numpy import*
vet=array(eval(input(":"))).split(',')


for i in range(0,[i],-1):
	print([vet])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:44:52) 
-- CODE:
from numpy import*
vet=array(eval(input(":")))


for i in range(0,[i],-1):
	print([vet])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:18) 
-- CODE:
from numpy import*
i=array(eval(input(":")))


for i in range(0,[i],-1):
	print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:40) 
-- CODE:
from numpy import*
i=array(eval(input(":")))


for i in range(0,i,-1):
	print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:45) 
-- CODE:
from numpy import*
i=array(eval(input(":")))


for i in range(0,i,-1):
	print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:45:49) 
-- CODE:
from numpy import*
i=array(eval(input(":")))


for i in range(0,i,-1):
	print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:45:49) 
-- CODE:
from numpy import*
i=array(eval(input(":")))


for i in range(0,i,-1):
	print([i])
-- EXECUTION TIME:
1.09543
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/3184/main.py", line 5, in <module>
    for i in range(0,i,-1):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:46:17) 
-- CODE:
from numpy import*
i=array(eval(input(":")))


for i in range(i,0):
	print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:46:25) 
-- CODE:
from numpy import*
i=array(eval(input(":")))


for i in range(i,0):
	print([i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
